fix: overflow issue in homepage

--- a/src/components/Header/Navbar/navbar.scss
+++ b/src/components/Header/Navbar/navbar.scss
@@ -12,6 +12,7 @@
     // backdrop-filter: blur(10px);
     color: #fff;
     padding: 0 16px;
+    transition: background-color 0.3s ease;
     
     .logo {
         height: 6rem;
