--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,3 +1,7 @@
+.homepageContainer {
+  overflow-x: hidden;
+}
+
 .heroContainer {
   height: 100vh;
   width: 100%;
